[package]
name = "detection_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "detection_lib"
crate-type = ["cdylib"]

[dependencies]
shared = { path = "../shared", features = ["avro"] }

anyhow = "1.0.53"
pyo3 = { version = "0.17.3", features = ["extension-module", "anyhow"] }

aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["full"] }
futures = "0.3"
futures-util = "0.3.23"
serde = "^1"
serde_json = "^1"
serde_yaml = "0.9"
apache-avro = { git = "https://github.com/apache/avro.git", rev = "05099c3", features = [
  "zstandard",
  "snappy",
] }
memmap2 = "0.5.8"
tikv-jemallocator = { version = "0.5.0", features = [
  "disable_initial_exec_tls",
] }
lazy_static = "1.4.0"
async_once = "0.2.6"
async-compression = { version = "0.3.14", default-features = false, features = [
  "tokio",
  "zstd",
] }
pythonize = "0.17.0"
zstd = "0.12.1"
once_cell = "1.17.0"
