[package]
name = "detection_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "detection_lib"
crate-type = ["cdylib"]

[dependencies]
shared = { path = "../shared", features = ["avro"] }

anyhow = "1.0.53"

tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["full"] }

serde = "^1"
serde_json = "^1"
serde_yaml = "0.9"
apache-avro = { git = "https://github.com/apache/avro.git", rev = "05099c3", features = [
  "zstandard",
  "snappy",
] }
tikv-jemallocator = { version = "0.5.0", features = [
  "disable_initial_exec_tls",
] }
lazy_static = "1.4.0"
async_once = "0.2.6"

once_cell = "1.17.0"
memmap2 = "0.5.8"
pythonize = "0.18.0"
pyo3 = { version = "0.18.0", features = ["extension-module", "anyhow"] }
# async-compression = { version = "0.3.14", default-features = false, features = [
#   "tokio",
#   "zstd",
# ] }