[package]
name = "lake_writer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
tokio = { version="1.17.0", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["full"] }
serde = "^1"
serde_json = "^1"
log = "^0.4"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }
tracing = { version = "0.1.30", features = ["log"] }
# NOTE: the following crate is not part of the SDK, but it is maintained by AWS.
lambda_runtime = "0.4.1"
aws-config = "0.47.0"
parquet = "20.0.0"
arrow = "20.0.0"
aws_lambda_events = "0.6.3"
aws-sdk-s3 = "0.17.0"
futures = "0.3"
futures-util = "0.3.23"
anyhow = "1.0.53"
reqwest = { version = "0.11.9", default-features=false, features = ["rustls-tls", "json", "blocking", "stream", "multipart"] }
json-deserializer="0.4.0"
uuid={ version="1.1.2", features = ["v4"]}
bytes = "1.1.0"
lazy_static = "1.4.0"
tokio-stream = { version = "0.1.9", features = ["io-util"] }
concurrent-queue = "1.2.4"
rayon = "1.5.3"
threadpool = "1.8.1"
