[package]
name = "lake_writer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["full"] }
serde = "^1"
serde_json = "^1"
log = "^0.4"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }
tracing = { version = "0.1.30", features = ["log"] }
# NOTE: the following crate is not part of the SDK, but it is maintained by AWS.
lambda_runtime = "0.6.0"
aws-config = "0.48.0"

aws_lambda_events = "0.6.3"
aws-sdk-s3 = "0.18.0"
aws-sdk-lambda = "0.18.0"
futures = "0.3"
futures-util = "0.3.23"
anyhow = "1.0.53"
reqwest = { version = "0.11.9", default-features = false, features = [
  "rustls-tls",
  "json",
  "blocking",
  "stream",
  "multipart",
] }
json-deserializer = "0.4.0"
uuid = { version = "1.1.2", features = ["v4"] }
bytes = "1.1.0"
lazy_static = "1.4.0"
tokio-stream = { version = "0.1.9", features = ["io-util"] }
threadpool = "1.8.1"
async-compat = "0.2.1"
polars = {version = "0.24.2", features = [
  "parquet", "dtype-full", "fmt", "timezones", "lazy", "list"
  ]}
rand = "0.8.5"
chrono="*"
arrow2 = { git = "https://github.com/jorgecarleitao/arrow2.git", rev = "c615095", features = [
  "io_avro",
  "io_avro_async",
  "io_avro_compression",
  "io_parquet_compression",
  "io_parquet",
  "io_print",
  "io_ipc",
] }
tikv-jemallocator = { version = "0.5.0" }
# avro-schema = {version = "0.3.0", features = ["full"]}
# avro-rs = "0.13.0"
async-stream = { version = "0.3.3" }               # NEED THIS or parquet2 fails compile
parquet = "22.0.0"
arrow = { version = "22.0.0", features = ["ffi"] }
