[package]
name = "lake_writer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
rayon = "1.5.3"
zstd = "0.11.2"
base64 = "0.13.1"
bytes = "1.2.1"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["full"] }
serde = "^1"
serde_json = "^1"
log = "^0.4"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }
tracing = { version = "0.1.30", features = ["log"] }
# NOTE: the following crate is not part of the SDK, but it is maintained by AWS.
lambda_runtime = "0.7.0"
aws-config = "0.51.0"

aws_lambda_events = "0.7.2"
aws-sdk-s3 = "0.21.0"
aws-sdk-lambda = "0.21.0"
aws-sdk-sns = "0.21.0"
futures = "0.3"
futures-util = "0.3.23"
anyhow = "1.0.53"
reqwest = { version = "0.11.9", default-features = false, features = [
  "rustls-tls",
  "json",
  "blocking",
  "stream",
  "multipart",
] }

json-deserializer = "0.4.0"
uuid = { version = "1.1.2", features = ["v4"] }
lazy_static = "1.4.0"
async_once = "0.2.6"
tokio-stream = { version = "0.1.9", features = ["io-util"] }
threadpool = "1.8.1"
async-compat = "0.2.1"
apache-avro = { git = "https://github.com/apache/avro.git", rev = "c78f12f", features = [
  "zstandard",
  "snappy",
] }
rand = "0.8.5"
chrono = "*"
arrow2 = { git = "https://github.com/jorgecarleitao/arrow2.git", rev = "c615095", features = [
  "io_avro",
  "io_avro_async",
  "io_avro_compression",
  "io_parquet_compression",
  "io_parquet",
  "io_print",
  "io_ipc",
] }
tikv-jemallocator = { version = "0.5.0" }
# avro-schema = {version = "0.3.0", features = ["full"]}
# avro-rs = "0.13.0"
async-stream = { version = "0.3.3" }               # NEED THIS or parquet2 fails compile
parquet = "27.0.0"
arrow = { version = "27.0.0", features = ["ffi"] }
