[package]
name = "log_puller"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
anyhow = "1.0.53"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["full"] }
futures = "0.3"
futures-util = "0.3.23"
serde = "^1"
serde_json = "^1"
serde_yaml = "0.9"
csv = "1.1.6"
log = "^0.4"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }
tracing = { version = "0.1.30", features = ["log"] }
lambda_runtime = "0.7.1"
aws-config = "0.51.0"
aws_lambda_events = "0.7.2"
aws-sdk-s3 = "0.21.0"
aws-sdk-secretsmanager = "0.21.0"
lazy_static = "1.4.0"
async_once = "0.2.6"
uuid = { version = "1.1.2", features = ["v4"] }
reqwest = { version = "0.11.2", default-features = false, features = [
  "rustls-tls-native-roots",
  "json",
] }
tikv-jemallocator = { version = "0.5.0" }
chrono = "0.4.19"
async-trait = "0.1.58"
enum_dispatch = "0.3.8"
regex = "1"
async-stream = "0.3.3"
zstd = "0.11.2"
walkdir = "2.3.2"
zip = "0.6.3"
