[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1"
serde_json = "^1"
serde_yaml = "0.9"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }
tracing = { version = "0.1.30", features = ["log"] }
time = "0.3.7"
lazy_static = "1.4.0"
async_once = "0.2.6"
log = "^0.4"
anyhow = "1.0.53"
lru = "0.9.0"
cached = "0.42.0"

aws-sdk-s3 = "0.24.0"
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
aws-sdk-secretsmanager = "0.24.0"

tokio = { version = "1.17.0", features = ["macros", "sync"] }
rayon = "1.5.3"
walkdir = "2.3.2"
config = { version = "0.13.1", features = ["yaml"] }

# VRL v0.24.1
value = { git = "https://github.com/vectordotdev/vector", rev = "8935681" }
vrl = { git = "https://github.com/vectordotdev/vector", rev = "8935681" }
vrl-stdlib = { git = "https://github.com/vectordotdev/vector", rev = "8935681" }

# wierd issue with 'alloc' missing from pest's Parser macro used in vrl requires reimporting with std to work...
pest = { version = "2.2.1", default-features = false, features = ["std"] }
pest_derive = { version = "2.2.1", default-features = false, features = [
  "std",
] }

apache-avro = { git = "https://github.com/apache/avro.git", rev = "05099c3", features = [
  "zstandard",
  "snappy",
], optional = true }

# detection_lib / enrichment related
zstd = "0.12.1"

futures = "0.3"
futures-util = "0.3.23"
once_cell = "1.17.0"
memmap2 = "0.5.8"
async-compression = { version = "0.3.14", default-features = false, features = [
  "tokio",
  "zstd",
] }
pythonize = "0.18.0"
pyo3 = { version = "0.18.0", features = ["extension-module", "anyhow"] }


[features]
default = []
avro = ["dep:apache-avro"]
